--- a/Warehouse.csproj
+++ b/Warehouse.csproj
@@ -62,10 +62,11 @@
     <Compile Include="model\Box.cs" />
     <Compile Include="model\BoxWithContents.cs" />
     <Compile Include="model\IHaveExpirationDate.cs" />
+    <Compile Include="model\IHaveVolume.cs" />
     <Compile Include="model\IHaveWeight.cs" />
     <Compile Include="model\PalletWithBoxes.cs" />
     <Compile Include="model\Pallet.cs" />
-    <Compile Include="model\IStorage.cs" />
+    <Compile Include="model\Storage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
