--- a/Warehouse.csproj
+++ b/Warehouse.csproj
@@ -64,6 +64,7 @@
     <Compile Include="model\IHaveExpirationDate.cs" />
     <Compile Include="model\IHaveVolume.cs" />
     <Compile Include="model\IHaveWeight.cs" />
+    <Compile Include="model\NoBoxesFoundException.cs" />
     <Compile Include="model\PalletWithBoxes.cs" />
     <Compile Include="model\Pallet.cs" />
     <Compile Include="model\Storage.cs" />
