--- a/Warehouse.csproj
+++ b/Warehouse.csproj
@@ -61,10 +61,10 @@
   <ItemGroup>
     <Compile Include="model\Box.cs" />
     <Compile Include="model\BoxWithContents.cs" />
-    <Compile Include="model\CannotAddException.cs" />
-    <Compile Include="model\IHaveExpirationDate.cs" />
-    <Compile Include="model\IHaveVolume.cs" />
-    <Compile Include="model\IHaveWeight.cs" />
+    <Compile Include="model\Exeptions\CannotAddException.cs" />
+    <Compile Include="model\Interfaces\IHaveExpirationDate.cs" />
+    <Compile Include="model\Interfaces\IHaveVolume.cs" />
+    <Compile Include="model\Interfaces\IHaveWeight.cs" />
     <Compile Include="model\PalletWithContents.cs" />
     <Compile Include="model\Pallet.cs" />
     <Compile Include="model\Storage.cs" />
@@ -94,6 +94,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SqlControllers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
